# mobilus-gtw-client

./: CMakeLists.txt  README.md
.github/mosquitto/: mosquitto.conf  passwd
.github/mosquitto/certs/: ca.crt  server.crt  server.key
.github/workflows/: continuous-integration.yml
include/jungi/mobgtw/: Action.h  Envelope.h  Error.h  ErrorCode.h  EventNumber.h  MessageBus.h  MessageType.h  MobilusCredentials.h  MqttDsn.h  MqttMobilusGtwClient.h  OperationType.h  Platform.h  ProtoUtils.h  SessionInformation.h
include/jungi/mobgtw/io/: EventLoop.h  NullEventLoop.h  SelectEventLoop.h  SocketEventHandler.h  SocketEvents.h
include/jungi/mobgtw/logging/: Logger.h  NullLogger.h
include/jungi/mobilus_gtw_client/: Action.h  ClientId.h  Envelope.h  Error.h  ErrorCode.h  EventNumber.h  MessageBus.h  MessageType.h  MobilusCredentials.h  MqttDsn.h  MqttMobilusGtwClient.h  MqttMobilusGtwClientConfig.h  OperationType.h  Platform.h  ProtoUtils.h  SessionInformation.h
include/jungi/mobilus_gtw_client/io/: BlockingClientWatcher.h  ClientWatcher.h  EventLoop.h  NullClientWatcher.h  NullEventLoop.h  SelectEventLoop.h  SocketEventHandler.h  SocketEvents.h  TimerEventHandler.h
include/jungi/mobilus_gtw_client/logging/: Logger.h  NullLogger.h
include/jungi/mobilus_gtw_client/proto/: CMakeLists.txt  CurrentStateRequest.proto  CurrentStateResponse.proto  DeviceSettingsRequest.proto  DevicesListRequest.proto  NetworkSettingsRequest.proto  UpdateDeviceRequest.proto  UpdateDeviceResponse.proto
proto/: CMakeLists.txt  CallEvents.proto  CurrentStateRequest.proto  CurrentStateResponse.proto  Device.proto  DeviceSettingsRequest.proto  DeviceSettingsResponse.proto  DevicesListRequest.proto  DevicesListResponse.proto  Event.proto  LoginRequest.proto  LoginResponse.proto  NetworkSettingsRequest.proto  NetworkSettingsResponse.proto  UpdateDeviceRequest.proto  UpdateDeviceResponse.proto
src/: ClientId.cpp  ClientId.h  Envelope.cpp  ExponentialBackoff.cpp  ExponentialBackoff.h  MosquittoCondition.cpp  MosquittoCondition.h  MqttDsn.cpp  MqttMobilusGtwClient.cpp  MqttMobilusGtwClientImpl.cpp  MqttMobilusGtwClientImpl.h  ProtoUtils.cpp  Qos.h  SelectCondition.cpp  SelectCondition.h  TimeUtils.cpp  TimeUtils.h
src/crypto/: Aes256Encryptor.cpp  Aes256Encryptor.h  CMakeLists.txt  Encryptor.h  EvpEncryptor.cpp  EvpEncryptor.h  bytes.h  hash.cpp  hash.h  utils.cpp  utils.h
src/io/: BlockingClientWatcher.cpp  SelectEventLoop.cpp
tests/: CMakeLists.txt  EnvelopeTest.cpp  MqttDsnTest.cpp  MqttMobilusGtwClientImplTest.cpp
tests/io/: CMakeLists.txt  TestClientWatcher.cpp  TestClientWatcher.h  TestSocketWatcher.cpp  TestSocketWatcher.h
tests/mocks/: CMakeLists.txt  MockMqttMobilusActor.cpp  MockMqttMobilusActor.h  MockMqttMobilusActorImpl.cpp  MockMqttMobilusActorImpl.h  MockMqttMobilusService.cpp  MockMqttMobilusService.h
tools/mobcli/: CMakeLists.txt  README.md
tools/mobcli/include/: config.h.in
tools/mobcli/src/: App.cpp  App.h  Command.h  Utils.h  main.cpp
tools/mobcli/src/commands/: CallEventsCommand.cpp  CallEventsCommand.h  ClientCommonCommand.cpp  ClientCommonCommand.h  CommonCommand.cpp  CommonCommand.h  CurrentStateCommand.cpp  CurrentStateCommand.h  DeviceListCommand.cpp  DeviceListCommand.h  DeviceSettingsCommand.cpp  DeviceSettingsCommand.h  NetworkSettingsCommand.cpp  NetworkSettingsCommand.h  SessionCommand.cpp  SessionCommand.h  SubscribeCommand.cpp  SubscribeCommand.h
tools/mobcli/src/mobilus_gtw_client/: StderrLogger.cpp  StderrLogger.h
